Bug 186721 Keyword protocol handler NewURI leaks uri if SetSpec fails patch by andersma@luther.edu r=timeless sr=darin